# TagMediaPlayer

./: .gitignore  .gitmodules  README.md
TagMediaPlayer/: CMakeLists.txt  CusVideoWidget.cpp  CusVideoWidget.h  CustomVideoWidget.cpp  CustomVideoWidget.h  GenericMacros.h  PlayerWidget.cpp  PlayerWidget.h  PlayerWidget.ui  SignalMacros.h  TagMediaPlayer.cpp  TagMediaPlayer.h  TagMediaPlayer.ui  TagMediaPlayer2.ui  TitleBar.cpp  TitleBar.h  TitleBar.ui  main.cpp  res.qrc  windowhelper.cpp  windowhelper.h
TagMediaPlayer/res/: style.css
TagMediaPlayer/res/font/: demo_index.html  iconfont.css  iconfont.eot  iconfont.js  iconfont.json
